--- a/_posts/2022-08-25-Hello-2022.markdown
+++ b/_posts/2022-08-25-Hello-2022.markdown
@@ -44,6 +44,14 @@ tLLWtG 的 Blog 开通了。
 
 大的 Jekyll 主题上直接 fork 了 Huxpro
 
+## UPD
+
+* 2022.12.22
+
+1. Sidebar中添加了**一言**模块。
+2. 引入了**百度统计**的脚本用于分析访问数据。
+3. 使用**百度搜索资源平台**方便进行SEO。
+
 
 ## 后记
 
