Add robots.txt and jekyll-sitemap

--- a/_posts/2022-08-25-Hello-2022.markdown
+++ b/_posts/2022-08-25-Hello-2022.markdown
@@ -52,6 +52,10 @@ tLLWtG 的 Blog 开通了。
 2. 引入了**百度统计**的脚本用于分析访问数据。
 3. 使用**百度搜索资源平台**方便进行 SEO。
 
+* 2022.12.23
+  
+1. 增加了 **robots.txt** 文件以禁止不必要的内容爬取。
+2. 安装了 **jekyll-sitemap** 插件用于自动生成 sitemap.xml，方便搜索引擎抓取内容。
 
 ## 后记
 
