--- a/_posts/2024-01-20-CF_Edu161.markdown
+++ b/_posts/2024-01-20-CF_Edu161.markdown
@@ -15,6 +15,8 @@ tags:
 
 111 上大分了。
 
+![FrierenSmile](../../../../img/emoji/FrierenSmile.jpg)
+
 ### CF1922A Tricky Template
 
 只要存在一个位置，使得 c 和 a, b 均不同就能构造出答案。
