--- a/_posts/2024-01-20-CF_Edu161.markdown
+++ b/_posts/2024-01-20-CF_Edu161.markdown
@@ -5,6 +5,7 @@ subtitle:   " \"Solutions of problem A-E\""
 date:       2024-01-20 13:00:00
 author:     "tLLWtG"
 header-style: text
+mathjax: true
 catalog: true
 tags:
     - Code
@@ -19,7 +20,7 @@ tags:
 
 ### CF1922A Tricky Template
 
-只要存在一个位置，使得 c 和 a, b 均不同就能构造出答案。
+只要存在一个位置，使得 $c$ 和 $a, b$ 均不同就能构造出答案。
 
 ```cpp
 void solve()
@@ -72,7 +73,7 @@ void solve()
 
 > 时隔一年我又犯了等号写成赋值的错误，令人感慨。（老玩家集体类目）
 
-首先观察出能用最近点传送就一定用上，并且不会出现往回走的情况。然后看数据范围，要求快速计算两点间最短距离，那显然用前缀和做最合适了。先预处理出每个点的最近点，存在 cls 里，然后从两个方向分别前缀和。
+首先观察出能用最近点传送就一定用上，并且不会出现往回走的情况。然后看数据范围，要求快速计算两点间最短距离，那显然用前缀和做最合适了。先预处理出每个点的最近点，存在 $cls$ 里，然后从两个方向分别前缀和。
 
 ```cpp
 void solve()
@@ -126,9 +127,9 @@ void solve()
 
 ### CF1922D Berserk Monsters
 
-这道题需要一个能灵活删除元素的线性结构，那么就很容易想到用双向链表来存储怪兽。同时注意到，只有上一轮死亡怪物的左右两个位置才有可能在下一轮再发生变动。于是可以用 acti 来存储可能发生变动的位置。一开始所有位置都存入 acti 内，在每一轮去查询 acti 内存的位置对应的怪物是否死亡，若死亡则把左右两个怪物加入下一轮的 acti 中，像这样不断的模拟 n 轮即得到答案。
+这道题需要一个能灵活删除元素的线性结构，那么就很容易想到用双向链表来存储怪兽。同时注意到，只有上一轮死亡怪物的左右两个位置才有可能在下一轮再发生变动。于是可以用 $acti$ 来存储可能发生变动的位置。一开始所有位置都存入 $acti$ 内，在每一轮去查询 $acti$ 内存的位置对应的怪物是否死亡，若死亡则把左右两个怪物加入下一轮的 $acti$ 中，像这样不断的模拟 $n$ 轮即得到答案。
 
-再分析一下时间复杂度，存入 acti 内的怪物数量是是一个常数乘上 n，set 本身操作是 logn 级别，于是总的时间复杂度是 O(nlogn)。
+再分析一下时间复杂度，存入 $acti$ 内的怪物数量是是一个常数乘上 $n$，$set$ 本身操作是 $\log{n}$ 级别，于是总的时间复杂度是 $O(n \log{n})$。
 
 ```cpp
 void solve()
@@ -216,15 +217,17 @@ void solve()
 
 求递增子序列（IS）数量是一个经典的动态规划问题，这题反过来，给定数量要求构造原序列。
 
-首先抽象出下面两个操作（设 x 是 IS 的数量，不考虑空子序列）：
+首先抽象出下面两个操作（设 $x$ 是 IS 的数量，不考虑空子序列）：
 
-1. 在数组末尾添加一个最小的数，则 x 变为 x + 1。
-2. 在数组末尾添加一个比所有数都大的数，则 x 变为 2 * x + 1。
+1. 在数组末尾添加一个最小的数，则 $x$ 变为 $x+1$。
+2. 在数组末尾添加一个比所有数都大的数，则 $x$ 变为 $2 \times x+1$。
 
-然后逆向的考虑如何将 x 变为 0：
+然后逆向的考虑如何将 $x$ 变为 $0$：
 
-1. x 为偶数时，在数组前面添加一个最小的数，则 x 变为 x - 1。
-2. x 为奇数时，在数组前面添加 cur，则 x 变为 (x - 1) / 2。
+1. $x$ 为偶数时，在数组前面添加一个最小的数，则 $x$ 变为 $x-1$。
+2. $x$ 为奇数时，在数组前面添加 $cur$，则 $x$ 变为 $\frac{x-1}{2}$。
+
+逆向操作形成的数组即为答案。
 
 ```cpp
 void solve()
@@ -257,7 +260,7 @@ void solve()
 
 #### 解2
 
-由二项式定理得 0, 1, 2, 3, ..., x - 1 的 IS 数量为 2^x。然后发现规律：先找出最大的 x，然后从大到小遍历每一个二进制位。如果第 i 位是 1，则在序列最后添加一个 i，这样操作会让答案增加 2^i。
+由二项式定理得 $0, 1, 2, 3, ..., x-1$ 的 IS 数量为 $2^x$。然后发现规律：先找出最大的 $x$，然后从大到小遍历每一个二进制位。如果第 $i$ 位是 $1$，则在序列最后添加一个 $i$，这样操作会让答案增加 $2^i$。
 
 ```cpp
 void solve()
